tests/reference/asr-incorrect_array_type_where_02-b821d8c.stderr
semantic error: the first array argument to `where` must be of type logical
 --> tests/errors/incorrect_array_type_where_02.f90:8:10
  |
8 |    where(i1) b = 1
  |          ^^ 
